fixing issue where text wraps under thumbnail in sidebar view mode FIT-2148

--- a/themes/expressbase/css/styles.css
+++ b/themes/expressbase/css/styles.css
@@ -529,6 +529,7 @@ html { box-sizing: border-box; }
 
 .node-view-mode-sidebar img.image-square, .node-view-mode-sidebar img.image-square_thumbnail, .node-view-mode-sidebar img.image-small_thumbnail, .node-view-mode-sidebar img.image-small { margin-bottom: 0; float: left; margin: 0 10px 10px 0; width: 50px; height: auto; }
 
+.node-view-mode-sidebar-content { overflow: hidden; }
 .node-view-mode-sidebar-content:after { content: ""; display: table; clear: both; }
 
 .node-view-mode-embed { margin-bottom: 20px; border-bottom: 1px solid #e0e0e0; padding-bottom: 20px; }
