--- a/themes/expressbase/scss/components/_global.scss
+++ b/themes/expressbase/scss/components/_global.scss
@@ -107,6 +107,7 @@ html {
 }
 .node-view-mode-sidebar-content {
   @include clearfloats;
+  overflow: hidden;
 }
 .node-view-mode-embed {
   margin-bottom:20px;
